--- a/style.css
+++ b/style.css
@@ -49,7 +49,19 @@ header .icons .fa-search{
     margin-right: var(--padding);
 }
 
-
+/* Video Player */
+.player {
+    /* sticky 이미지 고정하고 유동적으로 보여지는 것*/
+    position: sticky;
+    top: 0;
+    text-align:center;
+    background-color: var(--black-color);
+}
+.player video {
+    width: 100%;
+    height:100%;
+    max-width: 1000px;
+}
 
 
 
